# ask_mary

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  cloudbuild.yaml  firebase.json  main.py  pyproject.toml
.claude/: settings.json
.claude/hooks/: check-worktree.sh  enforce-tdd.sh  handoff-to-codex.sh  lint-and-format.sh  protect-immutable.sh  update-tracker.sh
.github/workflows/: ci.yml
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion_checklist.md
alembic/: env.py
alembic/versions/: a1b2c3d4e5f6_add_trials_table.py  b2c3d4e5f6a7_add_trial_id_fks.py  c3d4e5f6a7b8_add_twilio_call_sid.py  c5637630ca54_add_foreign_keys.py  e00d3d299827_initial_schema.py
comms_templates/: appointment_booked.yaml  appointment_reminder.yaml  confirmation_prompt.yaml  consent_sms.yaml  day_of_checkin.yaml  disclosure.yaml  ineligible_close.yaml  no_show_rescue.yaml  outreach_nudge.yaml  prep_instructions.yaml  protocol_change.yaml  unreachable.yaml  unreachable_escalation.yaml
eval/: metrics.py  run_eval.py
frontend/: index.html  package-lock.json
local_docs/: 2026-02-18-foundation-then-flood-design.md  agent-signature-contracts.md  agent_dev_workflow_plan.md  ask_mary_plan.md  database_schema.md  demo_script.md  hook-fix-notes.md  human_setup_checklist.md  implementation_tracker.md  known_issues.md  mary_voice_agent_prompt.md  runbook.md
scripts/: __init__.py  register_elevenlabs_tools.py  seed_demo.py
tests/: conftest.py  test_comms_templates.py
(+141 files in other folders)
